# CEO-Engine

./: .gitignore  CHANGELOG.md  LIVE_TESTING.md  QUICKSTART.md  README.md  build_windows.bat  build_windows_output.txt  build_windows_output2.txt  ceo_engine.spec  check_mt5.py  launcher.py  pyproject.toml  run.py  trading_journal.csv
.github/workflows/: tests.yml
ceo_engine_mt5/: __init__.py  alerts.py  backtest.py  candle_patterns.py  ceo_logging.py  ceo_structure.py  chart.py  chart_lwc.py  chart_png.py  chart_theme.py  dashboard.py  data.py  executor.py  funded_account_guard.py  indicators.py  journal.py  mt5_connect.py  mt5_live.py  mt5_live_session.py  mt5_live_signals.py  mt5_live_utils.py  multi_tf.py  news_filter.py  patterns.py  performance_monitor.py  report.py  risk_engine.py  run.py  session_filter.py  signals.py  visualise.py  walkforward.py
ceo_engine_mt5/templates/: dashboard.html
installer/scripts/: ceo_engine_installer.nsi
tests/: conftest.py  test_alerts.py  test_backtest.py  test_candle_and_geometric_patterns.py  test_ceo_structure.py  test_chart_lwc.py  test_confluence_fix.py  test_dashboard_js_syntax.py  test_dashboard_routes.py  test_dashboard_security.py  test_data.py  test_data_pipeline.py  test_executor.py  test_executor_broker_confirmation.py  test_funded_account_guard.py  test_journal.py  test_journal_concurrency.py  test_mt5_connect.py  test_mt5_live_glue.py  test_mt5_live_mtf_signal.py  test_mt5_live_run.py  test_mt5_live_signals_main_loop.py  test_multi_tf.py  test_news_filter.py  test_pattern_layers.py  test_performance_monitor.py  test_report.py  test_risk_engine.py  test_run.py  test_session_filter.py  test_signals.py  test_visualise.py  test_walkforward.py
